# mariadb-vector

./: README.md  pyproject.toml
.github/workflows/: format.yml
src/mariadb_vector/: __init__.py  functions.py  vector.py
